force-app/main/default/objects/AbbottWorkplace__c/AbbottWorkplace__c.object-meta.xml
<CustomObject>
    <label>Abbott Workplace</label>
    <nameField>
        <displayFormat>WP-{000000000}</displayFormat>
        <label>Abbott Workplace Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abbott Workplaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>