force-app/main/default/objects/AbbottWorkplace__c/fields/AbbottPartner__c.field-meta.xml
<CustomField>
    <fullName>AbbottPartner__c</fullName>
    <label>Abbott Partner</label>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Abbott Workplace</relationshipLabel>
    <relationshipName>Abbott_Workplace</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>