force-app/main/default/objects/AbbottWorkplace__c/fields/AbbottPartnerID__c.field-meta.xml
<CustomField>
    <fullName>AbbottPartnerID__c</fullName>
    <formula>AbbottPartner__r.PartnerID__c</formula>
    <label>Abbott Partner ID</label>
    <type>Text</type>
</CustomField>