force-app/main/default/objects/AbbottWorkplace__c/fields/AbbottPartnerName__c.field-meta.xml
<CustomField>
    <fullName>AbbottPartnerName__c</fullName>
    <formula>AbbottPartner__r.PartnerName__c</formula>
    <label>Abbott Partner Name</label>
    <type>Text</type>
</CustomField>