force-app/main/default/objects/AbbottWorkplace__c/fields/DateEnrolled__c.field-meta.xml
<CustomField>
    <fullName>DateEnrolled__c</fullName>
    <label>Date Enrolled</label>
    <type>Date</type>
</CustomField>