force-app/main/default/objects/AbbottWorkplace__c/fields/EmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>EmailOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>