force-app/main/default/objects/AbbottWorkplace__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <label>Employee ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>