force-app/main/default/objects/AbbottWorkplace__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Abbott Workplace</relationshipLabel>
    <relationshipName>Abbott_Workplace</relationshipName>
    <type>Lookup</type>
</CustomField>