force-app/main/default/objects/AbbottWorkplace__c/fields/InstitutionCode__c.field-meta.xml
<CustomField>
    <fullName>InstitutionCode__c</fullName>
    <formula>Institution__r.InstitutionCode__c</formula>
    <label>Institution Code</label>
    <type>Text</type>
</CustomField>