force-app/main/default/objects/AbbottWorkplace__c/fields/InstitutionEmail__c.field-meta.xml
<CustomField>
    <fullName>InstitutionEmail__c</fullName>
    <label>Institution Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>