force-app/main/default/objects/AbbottWorkplace__c/fields/InstitutionPhone__c.field-meta.xml
<CustomField>
    <fullName>InstitutionPhone__c</fullName>
    <label>Institution Phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>