force-app/main/default/objects/AbbottWorkplace__c/fields/MC_ID_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_ID_Sync_Eligibility__c</fullName>
    <formula>AbbottPartner__r.MC_ID_Sync_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC ID Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>