force-app/main/default/objects/AbbottWorkplace__c/validationRules/ANZ_Mandatory_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>ANZ_Mandatory_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(AbbottPartner__r.Market__c, &quot;ANZ&quot;),
    ISBLANK(InstitutionEmail__c)
)</errorConditionFormula>
    <errorDisplayField>InstitutionEmail__c</errorDisplayField>
    <errorMessage>Required field missing: Institution Email</errorMessage>
</ValidationRule>